hphp/hack/test/typecheck/namespace/use_conflict_enum2.php.exp
File "use_conflict_enum2.php", line 5, characters 6-7:
Cannot declare Foo because the name was explicitly used earlier via a `use' statement on line 3 (Parsing[1002])
