hphp/hack/test/typecheck/namespace/use_conflict_enum2.php
<?hh

use type UseNS\Foo;

enum Foo: int {}
